test/cases/compile_errors/struct_depends_on_itself_via_optional_field.zig
const LhsExpr = struct {
    rhsExpr: ?AstObject,
};
const AstObject = union {
    lhsExpr: LhsExpr,
};
export fn entry() void {
    const lhsExpr = LhsExpr{ .rhsExpr = null };
    const obj = AstObject{ .lhsExpr = lhsExpr };
    _ = obj;
}

// error
//
// :1:17: error: struct 'tmp.LhsExpr' depends on itself
